[gd_scene load_steps=7 format=2]

[ext_resource path="res://Resource/Buttons/Ok-2.png" type="Texture" id=1]
[ext_resource path="res://Resource/Buttons/Ok-1.png" type="Texture" id=2]
[ext_resource path="res://Game/UI/Screen/CongratScreen/CongratScreen.gd" type="Script" id=3]
[ext_resource path="res://Game/Characters/Players/Avatar.tscn" type="PackedScene" id=4]
[ext_resource path="res://Resource/Fonts/Bungee-Regular.ttf" type="DynamicFontData" id=6]

[sub_resource type="DynamicFont" id=1]
size = 10
font_data = ExtResource( 6 )

[node name="CongratScreen" type="Popup"]
visible = true
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 3 )

[node name="BackgroundColor" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0, 1, 1, 1 )

[node name="GridContainer" type="GridContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -65.5
margin_top = 25.0
margin_right = 65.5
margin_bottom = 110.0
rect_min_size = Vector2( 131, 0 )
mouse_filter = 0
custom_constants/vseparation = 42

[node name="Title" type="Label" parent="GridContainer"]
margin_right = 131.0
margin_bottom = 11.0
rect_min_size = Vector2( 131, 0 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Title"
align = 1
valign = 1

[node name="ItemAvatar" type="Control" parent="GridContainer"]
margin_top = 53.0
margin_right = 131.0
margin_bottom = 53.0

[node name="Sprite" type="Sprite" parent="GridContainer/ItemAvatar"]
visible = false
position = Vector2( 64, 0 )
scale = Vector2( 0.1, 0.1 )

[node name="Avatar" parent="GridContainer/ItemAvatar" instance=ExtResource( 4 )]
position = Vector2( 66, 0 )
scale = Vector2( 3, 3 )

[node name="ItemName" type="Label" parent="GridContainer"]
margin_top = 95.0
margin_right = 131.0
margin_bottom = 106.0
rect_min_size = Vector2( 131, 0 )
custom_fonts/font = SubResource( 1 )
text = "???"
align = 1
valign = 1

[node name="OK" type="TouchScreenButton" parent="GridContainer"]
position = Vector2( 25.5, 118 )
scale = Vector2( 0.15, 0.15 )
normal = ExtResource( 2 )
pressed = ExtResource( 1 )

[connection signal="released" from="GridContainer/OK" to="." method="_on_OK_released"]
